Hide navigation on tablets and phones and fix responsiveness of the book cover

--- a/less/main.less
+++ b/less/main.less
@@ -7,6 +7,14 @@
   padding: 20px 0 40px;
 }
 
+.book-cover {
+  text-align: center;
+
+  > img {
+    margin-bottom: 20px;
+  }
+}
+
 .book-details {
   .well;
 
